# ifc2osmod

./: .gitignore  README.md  pyproject.toml
data/freecad/: arch_eg.FCStd
data/ifc/: arch_eg-Building.ifc
data/osmod_results/: _config.yml  _toc.yml  intro.md
docs/: modeling_radiant.odt  osm_object_relationship.drawio
ifc2osmod/: add_ptac2osmod.py  add_sch2osmod.py  calc_massless_mat.py  eplus_sql2csv.py  execute_osmod.py  extract_osmod_opq_constr.py  extract_osmod_smpl_glz_constr.py  freecad_custom_pset.py  idf2osmod.py  idf_transition.py  ifc2osm.py  ifc2osmod.py  ifcarch2osmod.py  ifcopenshell_utils.py  openstudio_utils.py  osmod2ifc.py  osmod2ifcarch.py  read_ifc_envlp_mat_pset.py  read_ifc_mat_pset.py  settings.py  test.py  validate_ifc.py
ifc2osmod/utils/: openstudio_measure_utils.py  openstudio_utils.py
results/building_eg/: building_eg.osm  building_eg_add_ptac.osm
results/csv/: CustomPsets.csv  ifc_env_info.csv  ifc_envlp_info.csv  massless_mat_info.csv  mat_layers_pset.csv  mat_pset.csv
results/idf/: ASHRAE901_OfficeMedium_STD2007_Miami.idfold  ASHRAE901_OfficeMedium_STD2007_Miami_23.2.VCpErr  ASHRAE901_OfficeMedium_STD2007_Miami_23.2.idfnew  ASHRAE901_OfficeSmall_STD2022_Miami_23.2.VCpErr  ASHRAE901_OfficeSmall_STD2022_Miami_23.2.idf  ASHRAE901_OfficeSmall_STD2022_Miami_23.2.idfold  test_05_23.2.idf  test_05_23.2.idfold
results/ifc/: ASHRAE901_OfficeSmall_STD2022_Miami.ifc  idf2osmod_ASHRAE901_OfficeMedium_STD2007_Miami.ifc  idf2osmod_ASHRAE901_OfficeSmall_STD2022_Miami.ifc
results/ifc2osm_eg_result/: ifc2osm_eg_result.osm  out.idf  res.csv
(+226 files in other folders)
